# mmm-application-production

./: .coverage  .dockerignore  .env.example  .env.production  .gitignore  AI_DATA_PRIVACY_GUARANTEE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-v1.9.137.md  DOCKER.md  Dockerfile  GRID_PARAMETER_LOCATIONS.md  Makefile  PARAMETER_VALIDATION.md  README.md  SECURITY_PRIVACY_GUIDE.md  TODO.md  alembic.ini  apply_migration.py  create_tables.py  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  mmm_app.db  pyproject.toml  redis.conf  requirements-dev.txt  requirements.txt  test_3channels_52weeks.csv  test_bayesian_optimization.py  test_bayesian_quick.py  test_data_5channels_52weeks.csv  test_grid_sizes.py  test_reduced_params.csv
.github/workflows/: ci.yml  deploy-staging.yml  pr.yml  release.yml
alembic/: env.py
alembic/versions/: 001_add_client_tenant_fields.py  2025_09_25_1448-623072238987_add_client_id_and_organization_id_.py
aws/scripts/: add-client.sh  deploy-production.sh  setup-billing-alerts.sh
aws/terraform/: billing-alerts.tf  billing-only.tf  client-template.tf  clients.auto.tfvars  ecs-deploy.tf  main.tf  shared-services.tf  terraform.tfstate  terraform.tfstate.1757525212.backup  terraform.tfstate.1757525214.backup  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example
docs/: PRD.md
frontend/: app.js  index.html
k8s/production/: deployment.yml
k8s/staging/: deployment.yml
nginx/: nginx.conf
scripts/: deploy-with-auth.sh  production-test-suite.py  run_migration.py
src/mmm/: __main__.py
src/mmm/api/: auth.py  dependencies.py  main.py  schemas.py  websocket.py
src/mmm/api/routes/: admin.py  data.py  health.py  model.py  optimization.py  websocket.py
src/mmm/config/: database.py  settings.py  settings_test.py
src/mmm/data/: processor.py  validator.py
src/mmm/database/: connection.py  models.py
src/mmm/model/: mmm_model.py  response_curves.py
src/mmm/optimization/: optimizer.py
src/mmm/security/: data_isolation.py  data_retention.py  multi_tenant_auth.py  zero_knowledge.py
src/mmm/utils/: cache.py  client_context.py  encryption.py  exceptions.py  logging.py  progress.py  storage.py
src/mmm_application.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: app.js  index.html  sample-data.csv  websocket_test.html
static/uploads/: 39bbec9e-04c9-4e4e-9de2-d0189ba8e9fb.csv  8181b7b6-2913-44de-aded-eecd0b2b5e36.csv  c7300e6b-1413-462c-af58-bdc933f634e6.csv
tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_basic.py  test_data_validation.py  test_integration.py  test_mathematical_model.py  test_performance.py  test_websocket.py
